--- a/package.json
+++ b/package.json
@@ -53,15 +53,15 @@
     "@tarojs/webpack-runner": "3.0.7",
     "@types/react": "^16.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^2.x",
-    "@typescript-eslint/parser": "^2.x",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "babel-preset-taro": "3.0.7",
-    "eslint": "^6.8.0",
+    "eslint": "^8.2.0",
     "eslint-config-taro": "3.0.7",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "stylelint": "9.3.0",
-    "typescript": "^3.7.0"
+    "typescript": "^4.4.4"
   }
 }
